# modernisation-platform-ui

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .trivyignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cicd-codeql-analysis.yml  cicd-container-scan.yml  cicd-container-test.yml  cicd-dependency-review.yml  cicd-deploy-to-production.yml  cicd-openssf-scorecard.yml  cicd-pre-commit-update.yml  cicd-super-linter.yml  cicd-tests.yml  cicd-zizmor.yml
app/: app.py
app/projects/: README.md
app/projects/acronyms/: db_models.py
app/projects/acronyms/routes/: main.py
app/projects/aws_account_standards/jobs/: scraper.py
app/projects/aws_account_standards/routes/: main.py
app/projects/aws_account_standards/services/: AwsService.py
app/projects/milk_monitor/routes/: main.py
app/projects/milk_monitor/services/: github_service.py  slack_service.py
app/projects/modernisation_platform/routes/: main.py
app/projects/reports/routes/: main.py
app/projects/reports/services/: service.py
app/projects/repository_standards/: db_models.py
app/projects/repository_standards/clients/: github_client.py
app/projects/repository_standards/config/: owners_config.py  repository_compliance_config.py
app/projects/repository_standards/jobs/: map_github_repositories_to_owners.py
app/projects/repository_standards/models/: owner.py  repository_compliance.py  repository_info.py
app/projects/repository_standards/repositories/: asset_repository.py  owner_repository.py
app/projects/repository_standards/routes/: api.py  deprecated.py  main.py
app/projects/repository_standards/services/: asset_service.py  github_service.py  repository_compliance_service.py
app/shared/config/: app_config.py  error_handlers_config.py  jinja_config.py  routes_config.py  sentry_config.py
app/shared/middleware/: auth.py  error_handler.py
app/shared/routes/: auth.py  main.py  robots.py
app/shared/services/: auth0_service.py  github_app_auth_service.py
app/static/: VERSION.txt
app/static/javascript/: milk_monitor.js  moj-frontend.min.js
app/static/projects/acronyms/javascript/: live-search.js
app/static/stylesheets/: milk_monitor.css  moj-frontend.min.css
app/templates/projects/acronyms/pages/: main.html
app/templates/shared/components/: base.html
app/templates/shared/pages/: home.html
contrib/: docker-compose.yaml
contrib/db-init/: 01-stub-repository-standards-data.sql
helm/modernisation-platform-ui/: Chart.yaml  values-prod.yaml
helm/modernisation-platform-ui/templates/: deployment.yaml  ingress.yaml  jobs-aws-account-standards-scraper.yaml
test/: container-structure-test.yml
test/test_app/: test.py
test/test_app/test_jobs/: test_map_github_repositories_to_owners.py
(+28 files in other folders)
