[project]
name = "modernisation-platform-ui"
version = "1.0.0"
description = "Passionate engineers delivering great services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "authlib==1.6.8",
  "flask==3.1.3",
  "flask-cors==6.0.2",
  "flask-limiter==4.1.1",
  "flask-sqlalchemy==3.1.1",
  "govuk-frontend-jinja==4.0.0",
  "gunicorn==23.0.0",
  "pygithub==2.8.1",
  "pynacl==1.6.2",
  "sentry-sdk==2.53.0",
  "urllib3==2.6.3",
  "werkzeug==3.1.6",
]

[dependency-groups]
dev = [
  "coverage==7.13.4",
  "pre-commit==4.5.1",
  "pytest==8.4.2",
  "ruff==0.15.2",
  "zizmor==1.22.0",
]

[tool.sqlfluff.core]
dialect = "postgres"

# [tool.ruff.lint]
# select = [
#     # flake8-bugbear
#     "B",
#     # pycodestyle
#     "E",
#     # Pyflakes
#     "F",
#     # isort
#     "I",
#     # flake8-simplify
#     "SIM",
#     # pyupgrade
#     "UP",
# ]
