[project]
name = "modernisation-platform-ui"
version = "1.0.0"
description = "Passionate engineers delivering great services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "authlib==1.7.2",
  "boto3==1.43.40",
  "flask==3.1.3",
  "flask-cors==6.0.5",
  "flask-limiter==4.1.1",
  "flask-sqlalchemy==3.1.1",
  "govuk-frontend-jinja==4.0.0",
  "gunicorn==26.0.0",
  "mypy-boto3-sts>=1.43.0",
  "pygithub==2.9.1",
  "pynacl==1.6.2",
  "sentry-sdk==2.64.0",
  "urllib3==2.7.0",
  "werkzeug==3.1.8",
]

[dependency-groups]
dev = [
  "coverage==7.15.0",
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "ruff==0.15.20",
  "zizmor==1.26.1",
]

[tool.sqlfluff.core]
dialect = "postgres"

# [tool.ruff.lint]
# select = [
#     # flake8-bugbear
#     "B",
#     # pycodestyle
#     "E",
#     # Pyflakes
#     "F",
#     # isort
#     "I",
#     # flake8-simplify
#     "SIM",
#     # pyupgrade
#     "UP",
# ]
